--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.3.2",
     "@types/bcrypt": "^6.0.0",
     "@types/jest": "^30.0.0",
+    "@types/mongodb": "^4.0.6",
     "@types/node": "^24.6.2",
     "@types/validator": "^13.15.3",
     "git-commit-msg-linter": "^5.0.8",
@@ -24,6 +26,7 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "mongodb": "^6.20.0",
     "validator": "^13.15.15"
   }
 }
