--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/jest": "^30.0.0",
     "@types/mongodb": "^4.0.6",
     "@types/node": "^24.6.2",
+    "@types/supertest": "^6.0.3",
     "@types/validator": "^13.15.3",
     "git-commit-msg-linter": "^5.0.8",
     "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "sucrase": "^3.35.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
     "typescript": "^5.9.3"
   },
