--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/express": "^5.0.5",
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
+    "fast-glob": "^3.3.3",
     "mongodb": "^6.20.0",
     "validator": "^13.15.15"
   }
