--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@types/express": "^5.0.5",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "fast-glob": "^3.3.3",
     "mongodb": "^6.20.0",
